$Id: CHANGES,v 1.73 2000/08/19 23:48:10 stelian Exp $

Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
===================================================================

1.	Fixed the signal handling in dump (which I broke in 0.4b17)
	which was causing several strange dump failures (dump
	hanged or segmentation faults etc). 

2.	Specified the default blocksize in the dump man page.

3.	Changed two info messages of restore to be written on stdout
	instead of stderr in order to leave stderr only for errors
	or warnings. Thanks to Stephen Atwell 
	<satwell@urbana.css.mot.com> for the suggestion.

4.	Corrected an off by one calculation which prevented
	dumping a directory having a 1 character name length.
	Thanks to Bernhard Erdmann <bernhard.erdmann@gmx.de>
	for reporting the bug.

5.	Reinforce dump in order to allow only level 0 and no
	-u option when dumping a subdirectory, and document 
	this in the man page. Thanks to Bernhard Erdmann 
	<bernhard.erdmann@gmx.de> for reporting the bug.

Changes between versions 0.4b17 and 0.4b18 (released June 30, 2000)
===================================================================

1.	Fixed a potential buffer overflow in restore. Thanks
	to Stan Bubrouski <satan@fastdial.net> for reporting 
	the bug.

2.	Fixed a readline-related bug which prevented
	'cat DUMPFILE | restore -i -f -' from working. Thanks
	to Charles Karney <karney@users.sourceforge.net>
	for the bug report.

3.	Changed a few "panic" into "exit", causing restore to
	be more stable against some attacks (like the last one
	reported on Bugtraq, although the last version of restore
	was not vulnerable - just dumped core). Thanks to
	Andreas Hasenack <andreas@conectiva.com.br> for reporting
	the bugs to me.

4.	Removed the suid-root bit on dump and restore in the
	default build (and generated RPMs). It should be safer
	now. Users who need the suid-root capabilities in order
	to make network backups should read first the man page