@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.73 2000/08/19 23:48:10 stelian Exp $
+$Id: CHANGES,v 1.74 2000/08/20 15:17:36 stelian Exp $
 
 Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
 ===================================================================
@@ -23,6 +23,12 @@ Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
 	-u option when dumping a subdirectory, and document 
 	this in the man page. Thanks to Bernhard Erdmann 
 	<bernhard.erdmann@gmx.de> for reporting the bug.
+
+6.	Fixed a small harmless bug in restore which caused
+	in some conditions hard links to be restored several
+	times (therefore generation some warning messages).
+	Thanks to Kenneth Porter <shiva@well.com> for
+	reporting the bug.
 
 Changes between versions 0.4b17 and 0.4b18 (released June 30, 2000)
 ===================================================================
